--- a/app/views/visitors/new.html.erb
+++ b/app/views/visitors/new.html.erb
@@ -1,3 +1,3 @@
 <h3>Primeiro Programa em Rails</h3>
 <p>Hoje são <%=@primeiro.agora%></p>
-<p>Bem vindo <%=@primeiro.name%>, seja bem vido ao Rails</p>
+<p>Olá <%=@primeiro.name%>. Seja bem vido ao Rails</p>
